# sekv-memcached

./: README.md  sgx_t.mk  sgx_t.mk.SIM  sgx_u.mk
trusted/: encl1.c  encl1.edl  encl1.h  encl1.lds  encl1_t.c  encl1_t.h
untrusted/: Makefile  Makefile.am  Makefile.am.HW  Makefile.in  config.h  config.h.in  config.status  configure  encl1_u.c  encl1_u.h  hash.py  memcached  memcached-debug  memcached.c  memcached.spec  myhash  myhash.c  sample.c  sample.h  sizes.c  stats.c  testapp.c  timedrun.c  version.m4
untrusted/.deps/: memcached-assoc.Po  memcached-bipbuffer.Po  memcached-cache.Po  memcached-crawler.Po  memcached-daemon.Po  memcached-encl1_u.Po  memcached-hash.Po  memcached-items.Po  memcached-jenkins_hash.Po  memcached-logger.Po  memcached-memcached.Po  memcached-murmur3_hash.Po  memcached-slabs.Po  memcached-stats.Po  memcached-thread.Po  memcached-util.Po  memcached_debug-assoc.Po  memcached_debug-bipbuffer.Po  memcached_debug-cache.Po  memcached_debug-crawler.Po  memcached_debug-daemon.Po  memcached_debug-encl1_u.Po  memcached_debug-hash.Po  memcached_debug-items.Po  memcached_debug-jenkins_hash.Po  memcached_debug-logger.Po  memcached_debug-memcached.Po  memcached_debug-murmur3_hash.Po  memcached_debug-slabs.Po  memcached_debug-stats.Po  memcached_debug-thread.Po  memcached_debug-util.Po
untrusted/autom4te.cache/: output.0  requests  traces.0  traces.1
untrusted/doc/: Makefile  Makefile.in
